fix: overflow-x hidden for block content
to fix images spreading over on mobile

--- a/src/css/__styles/init/_global.scss
+++ b/src/css/__styles/init/_global.scss
@@ -314,6 +314,8 @@ textarea {
 }
 
 .block-content {
+    overflow-x: hidden;
+    
     &:last-child {
         border-bottom: 1px solid $color-2;
     }
